<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:background="#147fbb"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="spinner.example.com.buanewtotal.buaPARTreg">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">


        <Button
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/piv"
            android:id="@+id/partchoose" />


        <ImageView

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/imageViewt" />

        <EditText
            android:id="@+id/pn"
            android:hint="@string/nn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/pun"
            android:hint="@string/un"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/page"
            android:hint="@string/saa"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/pcon"
            android:hint="@string/pn"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/pcook"
            android:hint="@string/sc"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/pclean"
            android:hint="@string/scc"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ptla"
            android:hint="@string/sl"
            android:inputType="number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/padd"
            android:hint="@string/aaa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/preff"
            android:hint="@string/sr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <EditText
            android:id="@+id/ppass"
            android:hint="@string/pp"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reg"
            android:id="@+id/partupl" />
    </LinearLayout>
</ScrollView>
