<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#147fbb"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="45dp"
        android:paddingLeft="16dp"
        android:paddingRight="15dp">

        <ImageView
            android:background="@mipmap/bui"
            android:layout_gravity="center_horizontal"
            android:layout_width="130dp"
            android:layout_height="130dp" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/uuu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/un" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">
            <EditText android:id="@+id/pass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/pp"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/abc"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:textColor="#FFFFFF"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:padding="12dp"
            android:text="@string/up"/>

        <TextView android:id="@+id/fp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="14dp"
            android:text="@string/pre"
            android:gravity="center"
            android:textSize="16dip"/>
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button android:id="@+id/full"
                android:layout_marginLeft="39dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/fl"
                android:textAllCaps="false"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textSize="14dip"/>
            <TextView android:id="@+id/or"
                android:layout_marginTop="17dp"
                android:layout_marginLeft="19dp"
                android:layout_toRightOf="@id/full"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/or"
                android:gravity="center"
                android:textSize="15dip"/>
            <Button android:id="@+id/part"
                android:layout_marginLeft="19dp"
                android:layout_toRightOf="@id/or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:text="@string/pr"
                android:background="@color/colorPrimary"
                android:gravity="center"
                android:textColor="#FFFFFF"
                android:textAllCaps="false"
                android:textSize="14dip"/>

        </RelativeLayout>


    </LinearLayout>
</ScrollView>